# hard-itl

./: .gitignore  Makefile  README.md  brief.md  config.real.example.yaml  config.yaml  orchestrator.py  pyproject.toml
.devcontainer/: devcontainer.json
agents/: __init__.py  analyst.py  llm_client.py  nim_client.py  orchestrator_nim.py  planner.py  triage.py
dashboard/: server.py
firmware/: CMakeLists.txt  Makefile  README.md  bootsel_helper.h  rp2350_framing_hunt.c  rp2350_parity_hunt.c  rp2350_signature_check.c  rp2350_uart_demo.c
runner/: __init__.py  cli.py  flash.py  runner.py  saleae_capture.py  serial_capture.py
schemas/: types.py
scripts/: demo.py  start_nim_nemotron_9b.sh  stop_nim_nemotron_9b.sh
tools/: smoke_concurrency.sh
