[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hil-multi-agent-debugger"
version = "0.1.0"
description = "Multi-agent HIL debugger for Pi UART with local NIM endpoint"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["runner", "agents"]
