[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgecase"
version = "0.1.0"
description = "EdgeCase: multi-agent HIL debugger for RP2350 UART with local NIM endpoint"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["runner", "agents"]
